Add some RSS news items

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://hugo.openmodelica.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'OpenModelica'
 theme = 'openmodelica'
 
 [markup]
