--- a/.CI/image/Dockerfile
+++ b/.CI/image/Dockerfile
@@ -5,6 +5,6 @@ FROM ubuntu
 RUN export DEBIAN_FRONTEND=noninteractive && \
   mkdir -p /cache/hugo && chmod ugo+rwx /cache/hugo && \
   apt-get update && \
-  apt-get install -qyy ca-certificates hugo zip && \
+  apt-get install -qyy ca-certificates hugo zip linkchecker && \
   rm -rf /var/lib/apt/lists/* && \
   apt-get clean
