Print the user names

--- a/.CI/Jenkinsfile
+++ b/.CI/Jenkinsfile
@@ -63,6 +63,7 @@ pipeline {
       script {
         def userIds = slackUserIdsFromCommitters() + ["sjoelund"]
         def userIdsString = userIds.collect { "<@$it>" }.join(' ')
+        echo "$userIdsString"
         slackSend(channel: '#jenkins', message: "$userIdsString Something is wrong with ${env.BUILD_URL}", sendAsText: true)
       }
     }
