--- a/.CI/Jenkinsfile
+++ b/.CI/Jenkinsfile
@@ -50,7 +50,7 @@ pipeline {
     steps {
       script {
         echo "Running on: ${env.NODE_NAME}"
-        sh "linkchecker --threads=15  --no-robots --check-extern --ignore-url=http://hugo.openmodelica.org/forum --ignore-url=http://hugo.openmodelica.org/doc --ignore-url=https://openmodelica.org/svn --ignore-url=https://openmodelica.org/git-readonly/ --ignore-url=http://omwebbook.openmodelica.org/ --ignore-url=https://openmodelica.org/git/ http://hugo.openmodelica.org"
+        sh "linkchecker --threads=15  --no-robots --check-extern --ignore-url=http://hugo.openmodelica.org/forum --ignore-url=http://hugo.openmodelica.org/doc --ignore-url=https://openmodelica.org/svn --ignore-url=https://openmodelica.org/git-readonly/ --ignore-url=http://omwebbook.openmodelica.org/ --ignore-url=https://openmodelica.org/git/ --ignore-url=http://dx.doi.org/10. http://hugo.openmodelica.org"
       }
     }
   }
